# qjs

./: .gitignore  ADVANCED_OPTIMIZATIONS.md  ARRAY_BUFFER_COMPLETION_REPORT.md  ARRAY_BUFFER_TESTS.md  AWAIT_IMPLEMENTATION.md  CLASS_IMPLEMENTATION_REPORT.md  Cargo.toml  IC_TEST_SUITE.md  TAGGED_TEMPLATE_TESTS_REPORT.md  TASK_COMPLETION.md  mandelbrot.js  out.txt  temp_inspect.rs  test.js  todo.md  todo3.md
core/ast/: Cargo.toml
core/ast/examples/: example01.rs
core/ast/src/: ast.rs  ast_to_js.rs  lexer.rs  lib.rs  parser.rs  regexp.rs  regexp_property_data.rs  token.rs
core/ast/tests/: test_ast_to_js_roundtrip.rs  test_ast_to_js_tes262.rs  test_lib.rs
core/atoms/: Cargo.toml
core/atoms/src/: lib.rs
core/built_ins/: Cargo.toml
core/built_ins/src/: array.rs  array_buffer.rs  atomics.rs  boolean.rs  collections.rs  data_view.rs  diagnostics.rs  eval.rs  function.rs  generator.rs  generator_function.rs  intl.rs  iterable.rs  lib.rs  math.rs  number.rs  object.rs  promise.rs  proxy.rs  reflect.rs  regexp.rs  serialization.rs  string.rs  symbol.rs  temporal.rs  time.rs  typed_array.rs  uri.rs
core/cfg/: Cargo.toml
core/cfg/src/: builder.rs  decode.rs  lib.rs
core/cfg/tests/: cfg.rs
core/codegen/: Cargo.toml
core/codegen/src/: compile_expressions.rs  compile_functions.rs  compile_statements.rs  emit.rs  js_value.rs  lib.rs  vm.rs
core/codegen/tests/: codegen.rs
core/direct_optimization/: Cargo.toml
core/direct_optimization/src/: lib.rs  opt_impl.rs
core/direct_optimization/src/opt_impl/: coalesce_registers.rs  constant_fold.rs  copy_propagation.rs  eliminate_dead_code.rs  fold_temporary_checks.rs  optimize_basic_peephole.rs  optimize_bytecode.rs  optimize_superinstructions.rs  reuse_registers_linear_scan.rs  run_fixed_point_round.rs  run_until_stable.rs  simplify_branches.rs
core/direct_optimization/tests/: direct_optimization.rs
core/disasm/: Cargo.toml
core/disasm/src/: lib.rs
core/disasm/tests/: disasm.rs  disasm_optimizations.rs
core/gc/: Cargo.toml
core/gc/src/: lib.rs
core/gc/tests/: gc.rs
core/heap/: Cargo.toml
core/heap/src/: lib.rs
core/runtime/: Cargo.toml
core/runtime/src/: gc.rs  js_value.rs  lib.rs  runtime.rs
core/runtime/tests/: runtime.rs
core/ssa/: Cargo.toml
core/ssa/src/: analysis.rs  builder.rs  bytecode_fallback.rs  ir.rs  lib.rs  optimization.rs  passes.rs  semantics.rs
core/ssa/src/jit/: codegen.rs  lower.rs  mod.rs  regalloc.rs
core/ssa/src/passes/: alias.rs  block_layout.rs  cfg_simplification.rs  constant_eval.rs  constant_folding.rs  copy_propagation.rs  dead_code_elimination.rs  escape.rs  global_value_numbering.rs  induction.rs  inlining.rs  licm.rs  load_elim.rs  loop_invariant_code_motion_tests.md  loop_unroll.rs  loop_unswitch.rs  scalar_replace.rs  sccp.rs  store_elim.rs  strength_reduction.rs  value_range_propagation.rs
core/ssa/tests/: cfg_test.md  constant_folding_tests.md  copy_propagation_test.md  dead_code_elimination_test.md  js_markdown_port.rs  loop_invariant_code_motion_test.md  passes_comprehensive.rs  scaffolding.rs  ssa.rs  value_range_propagation_test.md
core/ssa/tests/js/: all copy.bc  all.bc  all.bc.txt  all_optimized.bc
core/ssa/tests/md/: gvn_test.md
core/ssa/tests/support/: js_suite_support.rs
core/value/: Cargo.toml
core/value/src/: lib.rs
core/value/tests/: value.rs
core/vm/: Cargo.toml
core/vm/backup/: vm copy.rs  vm.rs
core/vm/examples/: mandelbrot.rs
core/vm/src/: atoms.rs  gc.rs  heap.rs  js_value.rs  lib.rs  optimization.rs  runtime.rs  runtime_trait.rs  vm.rs
core/vm/src/js_value/: json.rs  tag_offset_arena_buffer.rs
core/vm/tests/: array_buffer_builtins.rs  array_builtins.rs  builtins.rs  string_builtins.rs  vm.rs
qjs-repl/: Cargo.toml
qjs-repl/src/: lib.rs  main.rs
