[workspace]
resolver = "2"
members = [
    # CORE
    "core/ast",
    "core/atoms",
    "core/built_ins",
    "core/cfg",
    "core/codegen",
    "core/direct_optimization",
    "core/disasm",
    "core/gc",
    "core/heap",
    "core/runtime",
    "core/ssa",
    "core/value",
    "core/vm",
    "qjs-repl",
]

[workspace.package]
edition = "2024"
version = "1.0.0-dev"
rust-version = "1.91.0"
authors = ["heruhday <heruhday@gmail.com>"]
repository = "https://github.com/heruhday/qjs"
license = "Unlicense OR MIT"
description = "XJS is a Javascript lexer, parser and compiler written in Rust. Currently, it has support for some of the language."
