[package]
name = "direct_optimization"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
codegen = { path = "../codegen" }
value = { path = "../value" }

[dev-dependencies]
disasm = { path = "../disasm" }
