[package]
name = "heap"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
atoms = { path = "../atoms" }
gc = { path = "../gc" }
value = { path = "../value" }
