[package]
name = "ssa"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
cfg = { path = "../cfg" }
codegen = { path = "../codegen" }
value = { path = "../value" }

[dev-dependencies]
vm = { path = "../vm" }
